tests/outref/TCT009.ref

-- OCTO395 : Assertion failed in LP_VERIFY_STRUCTURE.C when UNARY + operator is used

select * from names where id = 2 || 3;
select * from names where id = 2 || (+3);
select * from names where '23' = 2 || 3;
select * from names where '2-3' = 2 || -3;
select * from names where '23' = 2 || (+3);
select * from names where firstname = +'abcd';
select * from names where firstname = +'Zero';
select * from names where firstname = +lastname;
select * from names where id = +3;
select * from names where id = -(-(+3));
select * from names where id = 2+(+3);
select * from names where firstname = 'Zero' || +'';
select * from names where firstname = 'Zero' || -'';
select * from names where firstname = 'Zero' || +lastname;
select * from names where firstname = 'Zero' || -lastname;

-- Note: The below queries currently work in Octo but fail with Postgres.
--       The Octo output might change once YDBOcto#304 is fixed

select * from names where firstname = 'Zero' || lastname::integer;
select * from names where firstname = 'Zero' || 'abcd'::integer;
select * from names where firstname = 'Zero' || ''::integer;
select * from names where firstname = 'Zero' or lastname::integer;
select * from names where firstname = 'Zero' or 'abcd'::integer;
select * from names where firstname = 'Zero' or ''::integer;

[ERROR] PATH:LINENUM DATE TIME : ERR_TYPE_NOT_COMPATIBLE : Type INTEGER not compatible for || operator
Error with syntax near (line 1, column 32):

select * from names where id = 2 || 3;
                               ^
[ERROR] PATH:LINENUM DATE TIME : ERR_TYPE_NOT_COMPATIBLE : Type INTEGER not compatible for || operator
Error with syntax near (line 1, column 37):

select * from names where id = 2 || 3;
                                    ^
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: select * from names where id = 2 || 3;
[ERROR] PATH:LINENUM DATE TIME : ERR_TYPE_NOT_COMPATIBLE : Type INTEGER not compatible for || operator
Error with syntax near (line 1, column 32):

select * from names where id = 2 || (+3);
                               ^
[ERROR] PATH:LINENUM DATE TIME : ERR_TYPE_NOT_COMPATIBLE : Type INTEGER not compatible for || operator
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: select * from names where id = 2 || (+3);
[ERROR] PATH:LINENUM DATE TIME : ERR_TYPE_NOT_COMPATIBLE : Type INTEGER not compatible for || operator
Error with syntax near (line 1, column 34):

select * from names where '23' = 2 || 3;
                                 ^
[ERROR] PATH:LINENUM DATE TIME : ERR_TYPE_NOT_COMPATIBLE : Type INTEGER not compatible for || operator
Error with syntax near (line 1, column 39):

select * from names where '23' = 2 || 3;
                                      ^
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: select * from names where '23' = 2 || 3;
[ERROR] PATH:LINENUM DATE TIME : ERR_TYPE_NOT_COMPATIBLE : Type INTEGER not compatible for || operator
Error with syntax near (line 1, column 35):

select * from names where '2-3' = 2 || -3;
                                  ^
[ERROR] PATH:LINENUM DATE TIME : ERR_TYPE_NOT_COMPATIBLE : Type INTEGER not compatible for || operator
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: select * from names where '2-3' = 2 || -3;
[ERROR] PATH:LINENUM DATE TIME : ERR_TYPE_NOT_COMPATIBLE : Type INTEGER not compatible for || operator
Error with syntax near (line 1, column 34):

select * from names where '23' = 2 || (+3);
                                 ^
[ERROR] PATH:LINENUM DATE TIME : ERR_TYPE_NOT_COMPATIBLE : Type INTEGER not compatible for || operator
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: select * from names where '23' = 2 || (+3);
[ERROR] PATH:LINENUM DATE TIME : ERR_INVALID_INPUT_SYNTAX : Invalid input syntax : Expecting type NUMERIC or INTEGER : Actual type VARCHAR
Error with syntax near (line 1, column 45):

select * from names where firstname = +'abcd';
                                            ^
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: select * from names where firstname = +'abcd';
[ERROR] PATH:LINENUM DATE TIME : ERR_INVALID_INPUT_SYNTAX : Invalid input syntax : Expecting type NUMERIC or INTEGER : Actual type VARCHAR
Error with syntax near (line 1, column 45):

select * from names where firstname = +'Zero';
                                            ^
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: select * from names where firstname = +'Zero';
[ERROR] PATH:LINENUM DATE TIME : ERR_INVALID_INPUT_SYNTAX : Invalid input syntax : Expecting type NUMERIC or INTEGER : Actual type VARCHAR
Error with syntax near (line 1, column 40):

select * from names where firstname = +lastname;
                                       ^^^^^^^^
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: select * from names where firstname = +lastname;
ID|FIRSTNAME|LASTNAME
3|Lord|Nikon
(1 row)
ID|FIRSTNAME|LASTNAME
3|Lord|Nikon
(1 row)
ID|FIRSTNAME|LASTNAME
5|Zero|Cool
(1 row)
[ERROR] PATH:LINENUM DATE TIME : ERR_INVALID_INPUT_SYNTAX : Invalid input syntax : Expecting type NUMERIC or INTEGER : Actual type VARCHAR
Error with syntax near (line 1, column 51):

select * from names where firstname = 'Zero' || +'';
                                                  ^
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: select * from names where firstname = 'Zero' || +'';
[ERROR] PATH:LINENUM DATE TIME : ERR_INVALID_INPUT_SYNTAX : Invalid input syntax : Expecting type NUMERIC or INTEGER : Actual type VARCHAR
Error with syntax near (line 1, column 51):

select * from names where firstname = 'Zero' || -'';
                                                  ^
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: select * from names where firstname = 'Zero' || -'';
[ERROR] PATH:LINENUM DATE TIME : ERR_INVALID_INPUT_SYNTAX : Invalid input syntax : Expecting type NUMERIC or INTEGER : Actual type VARCHAR
Error with syntax near (line 1, column 50):

select * from names where firstname = 'Zero' || +lastname;
                                                 ^^^^^^^^
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: select * from names where firstname = 'Zero' || +lastname;
[ERROR] PATH:LINENUM DATE TIME : ERR_INVALID_INPUT_SYNTAX : Invalid input syntax : Expecting type NUMERIC or INTEGER : Actual type VARCHAR
Error with syntax near (line 1, column 50):

select * from names where firstname = 'Zero' || -lastname;
                                                 ^^^^^^^^
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: select * from names where firstname = 'Zero' || -lastname;
ID|FIRSTNAME|LASTNAME
(0 rows)
ID|FIRSTNAME|LASTNAME
(0 rows)
ID|FIRSTNAME|LASTNAME
(0 rows)
[ERROR] PATH:LINENUM DATE TIME : ERR_TYPE_NOT_COMPATIBLE : Type INTEGER not compatible for boolean operations
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: select * from names where firstname = 'Zero' or lastname::integer;
[ERROR] PATH:LINENUM DATE TIME : ERR_TYPE_NOT_COMPATIBLE : Type INTEGER not compatible for boolean operations
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: select * from names where firstname = 'Zero' or 'abcd'::integer;
[ERROR] PATH:LINENUM DATE TIME : ERR_TYPE_NOT_COMPATIBLE : Type INTEGER not compatible for boolean operations
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: select * from names where firstname = 'Zero' or ''::integer;
